idf_component_register(
    SRCS
        main.cpp
        wifimanager.cpp
        nv.cpp
        Counter.cpp
        web.cpp
        gps.cpp
        GNSSDecoder.cpp
        NMEADecoder.cpp
        UBXProtocol.cpp
        UBXMessage.cpp
        QueueManagement.cpp
        dac1220.cpp
        CircularBuffer.cpp
		PayloadExtractor.cpp
    INCLUDE_DIRS
        "."
)
